# protobuf

./: .gitignore  MODULE.bazel  protobuf_deps.bzl
benchmarks/: BUILD
conformance/: BUILD.bazel
lua/: BUILD.bazel
protos/: BUILD
protos/bazel/: upb_cc_proto_library.bzl
protos_generator/: BUILD
protos_generator/tests/: BUILD
python/: build_targets.bzl
rust/cpp_kernel/: BUILD
rust/test/cpp/interop/: BUILD
src/google/protobuf/: BUILD.bazel  port_def.inc
src/google/protobuf/compiler/: BUILD.bazel
src/google/protobuf/compiler/allowlists/: BUILD.bazel
src/google/protobuf/compiler/cpp/: BUILD.bazel
src/google/protobuf/compiler/csharp/: BUILD.bazel
src/google/protobuf/compiler/java/: BUILD.bazel
src/google/protobuf/compiler/objectivec/: BUILD.bazel
src/google/protobuf/compiler/php/: BUILD.bazel
src/google/protobuf/compiler/python/: BUILD.bazel
src/google/protobuf/compiler/ruby/: BUILD.bazel
src/google/protobuf/compiler/rust/: BUILD.bazel
src/google/protobuf/editions/: BUILD
src/google/protobuf/io/: BUILD.bazel
src/google/protobuf/json/: BUILD.bazel
src/google/protobuf/stubs/: BUILD.bazel
src/google/protobuf/testing/: BUILD.bazel
src/google/protobuf/util/: BUILD.bazel
upb/hash/: BUILD
upb/io/: BUILD
upb/lex/: BUILD
upb/mem/: BUILD
upb/message/: BUILD
upb/mini_descriptor/: BUILD
upb/reflection/: BUILD
upb/util/: BUILD
upb_generator/: BUILD
