load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//build_defs:cpp_opts.bzl", "COPTS")

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "allowlist",
    hdrs = ["allowlist.h"],
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        "//src/google/protobuf/stubs",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "allowlists",
    srcs = [
        "open_enum.cc",
    ],
    hdrs = ["allowlists.h"],
    copts = COPTS,
    strip_include_prefix = "/src",
    visibility = ["//src/google/protobuf:__subpackages__"],
    deps = [
        ":allowlist",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "allowlist_test",
    srcs = ["allowlist_test.cc"],
    copts = COPTS,
    deps = [
        ":allowlist",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

filegroup(
    name = "test_srcs",
    srcs = glob(
        [
            "*_test.cc",
            "*unittest.cc",
        ],
        allow_empty = True,
    ),
    visibility = ["//src/google/protobuf/compiler:__pkg__"],
)
