################################################################################
# Protocol Buffers Compiler - Rust code generator
################################################################################

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build_defs:cpp_opts.bzl", "COPTS")

cc_library(
    name = "rust",
    srcs = ["generator.cc"],
    hdrs = ["generator.h"],
    copts = COPTS,
    strip_include_prefix = "/src",
    visibility = [
        "//pkg:__pkg__",
        "//src/google/protobuf/compiler:__pkg__",
    ],
    deps = [
        ":context",
        ":crate_mapping",
        ":enum",
        ":message",
        ":naming",
        ":relative_path",
        "//src/google/protobuf",
        "//src/google/protobuf:port",
        "//src/google/protobuf/compiler:code_generator",
        "//src/google/protobuf/compiler/cpp:names",
        "//src/google/protobuf/io",
        "//src/google/protobuf/io:printer",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:optional",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "crate_mapping",
    srcs = ["crate_mapping.cc"],
    hdrs = ["crate_mapping.h"],
    strip_include_prefix = "/src",
    deps = [
        ":context",
        "//src/google/protobuf",
        "//src/google/protobuf/testing:file",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "crate_mapping_unittest",
    srcs = ["crate_mapping_unittest.cc"],
    deps = [
        ":context",
        ":crate_mapping",
        "//src/google/protobuf/testing",
        "//src/google/protobuf/testing:file",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:string_view",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "message",
    srcs = ["message.cc"],
    hdrs = ["message.h"],
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        ":accessors",
        ":context",
        ":enum",
        ":naming",
        ":oneof",
        "//src/google/protobuf",
        "//src/google/protobuf/compiler/cpp:names",
        "//src/google/protobuf/compiler/cpp:names_internal",
        "//upb_generator:mangle",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "accessors",
    srcs = [
        "accessors/accessor_case.cc",
        "accessors/accessors.cc",
        "accessors/map.cc",
        "accessors/repeated_field.cc",
        "accessors/singular_message.cc",
        "accessors/singular_scalar.cc",
        "accessors/singular_string.cc",
        "accessors/unsupported_field.cc",
    ],
    hdrs = [
        "accessors/accessor_case.h",
        "accessors/accessor_generator.h",
        "accessors/accessors.h",
    ],
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        ":context",
        ":helpers",
        ":naming",
        "//src/google/protobuf",
        "//src/google/protobuf/compiler/cpp:names_internal",
        "//src/google/protobuf/io:tokenizer",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "context",
    srcs = ["context.cc"],
    hdrs = ["context.h"],
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        "//src/google/protobuf",
        "//src/google/protobuf/compiler:code_generator",
        "//src/google/protobuf/io:printer",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "enum",
    srcs = ["enum.cc"],
    hdrs = ["enum.h"],
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        ":context",
        ":naming",
        "//src/google/protobuf",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "enum_test",
    srcs = ["enum_test.cc"],
    deps = [
        ":enum",
        "@abseil-cpp//absl/strings",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "naming",
    srcs = [
        "naming.cc",
        "rust_keywords.cc",
    ],
    hdrs = [
        "naming.h",
        "rust_keywords.h",
    ],
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        ":context",
        "//src/google/protobuf",
        "//src/google/protobuf/compiler:code_generator",
        "//src/google/protobuf/compiler/cpp:names_internal",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "oneof",
    srcs = ["oneof.cc"],
    hdrs = ["oneof.h"],
    copts = COPTS,
    strip_include_prefix = "/src",
    deps = [
        ":accessors",
        ":context",
        ":naming",
        "//src/google/protobuf",
        "//src/google/protobuf/compiler/cpp:names",
        "//src/google/protobuf/compiler/cpp:names_internal",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "relative_path",
    srcs = ["relative_path.cc"],
    hdrs = ["relative_path.h"],
    strip_include_prefix = "/src",
    deps = [
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "relative_path_test",
    srcs = ["relative_path_test.cc"],
    deps = [
        ":relative_path",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "helpers",
    srcs = ["accessors/helpers.cc"],
    hdrs = ["accessors/helpers.h"],
    strip_include_prefix = "/src",
    deps = [
        ":context",
        ":naming",
        "//src/google/protobuf",
        "//src/google/protobuf/io:tokenizer",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)
